--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
-node_modules/
+# Environment files
 .env
-.backend/assets/email.json
+# Sensitive data files
+backend/assets/email.json
+# Dependency directories
+node_modules/
+backend/node_modules/
